# krm-template-python

./: .coveragerc  .dockerignore  Dockerfile  README.md  pyproject.toml  skaffold.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: publish.yaml  test.yaml
base/: deployment.yaml  service.yaml
krm_template_python/: __init__.py  gunicorn_config.py  main.py  types.py
overlays/development/: kustomization.yaml  replicas.yaml
overlays/production/: containers.yaml  kustomization.yaml  replicas.yaml
scripts/: format.sh  lint.sh  run-gunicorn.sh  run-uvicorn.sh  test.sh
tests/: conftest.py  test_main.py
